JS query sin codigo libro

--- a/dashboard/soft-ui-dashboard-main/pages/sign-in.html
+++ b/dashboard/soft-ui-dashboard-main/pages/sign-in.html
@@ -124,9 +124,9 @@
                     </div>
                   </form>
                 </div>
-                <p id="LogInSuccessDiv"></p>
-                <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                  <p class="mb-4 text-sm mx-auto">
+                <p id="LogInSuccessDiv" class="font-weight-bolder text-info" style="display: none;">Logging you in...</p>
+                <div class="card-footer text-center pt-0 px-lg-2 px-1" id="NoAccountDiv">
+                  <p class="mb-4 text-sm mx-auto" >
                     Don't have an account?
                     <a href="javascript:;" class="text-info text-gradient font-weight-bold">Sign up</a>
                   </p>
@@ -216,6 +216,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/soft-ui-dashboard.min.js?v=1.0.5"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
 
 </html>
